--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lated",
+  "name": "lated-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.6.0",
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/legacy-modes": "^6.4.2",
+    "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.4",
-    "lucide-react": "^0.475.0",
+    "@uiw/react-codemirror": "^4.23.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
