--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@codemirror/language": "^6.10.8",
     "@codemirror/legacy-modes": "^6.4.2",
     "@phosphor-icons/react": "^2.1.7",
+    "@replit/codemirror-vim": "^6.2.1",
     "@tailwindcss/vite": "^4.0.4",
     "@uiw/react-codemirror": "^4.23.8",
     "react": "^19.0.0",
